--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,17 @@ edition = "2021"
 
 [dependencies]
 agb = "0.20.3"
+voladdress = "1.4.0"
+
+[[bin]]
+name = "example"
+path = "src/bin/example.rs"
+
+[profile.dev]
+opt-level = 3
+debug = true
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+debug = true
